--- a/style.css
+++ b/style.css
@@ -18,16 +18,17 @@ header{
     height: 100vh;
 }
 .caixa__link {
+    display: inline-block;
     font-size: 2rem;
     text-decoration: none;
     color: white;
     font-weight: bold;
     font-size: 3rem;
     letter-spacing: 1rem;
+    margin: 20% 0 20% 45%;
 }
 .caixa {
     display: inline-block;
-    margin: 20% 0 0 45%;
     background: black;
     box-shadow: 0px 0px 100px 90px black;
     text-align: center;
